--- a/resources.qrc
+++ b/resources.qrc
@@ -27,6 +27,13 @@
         <file>resources/images/bottombar/imagebutton_alarms.png</file>
         <file>resources/images/bottombar/imagebutton_settings.png</file>
 
+        <file>resources/images/bottombar/alarm_abandon.png</file>
+        <file>resources/images/bottombar/alarm_adrift.png</file>
+        <file>resources/images/bottombar/alarm_fire.png</file>
+        <file>resources/images/bottombar/alarm_mob.png</file>
+        <file>resources/images/bottombar/alarm_piracy.png</file>
+        <file>resources/images/bottombar/alarm_sinking.png</file>
+
         <file>resources/images/mainwindow/fairwind_icon.png</file>
 
         <file>resources/images/icons/apps_icon.png</file>
